# risk-engine

./: README.md  pyproject.toml
configs/: demo.yaml
data/cache/: prices_36c3e38204d5bab0.pkl  prices_3954b9eb9ba02322.pkl  prices_895c4f04a6ed2457.pkl  prices_aee44f6ba15752bf.pkl
runs/2026-02-14_12-14-59_demo/: config_snapshot.yaml
runs/2026-02-14_20-50-37_demo/outputs/: drawdown.csv  metrics.json  portfolio_returns.csv
src/risk_engine/: analysis.py  cli.py  config.py  run.py
src/risk_engine.egg-info/: SOURCES.txt  requires.txt
src/risk_engine/data/: market_data.py
src/risk_engine/reporting/: artifacts.py
src/risk_engine/risk/: core.py
